bridges/jac-bridge/tests/ui/two_error_types.stderr
error: bridge module must have at most one #[jac_error] type
 --> tests/ui/two_error_types.rs:5:5
  |
5 | mod m {
  |     ^
